First commited as before_102356_rev1